# svgbit

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py
SVGLib/: __main__.py  api.py
SVGLib/core/: STDataset.py  cluster.py  density.py  moran.py  utils.py
data/E13.5_rep1/spatial/: scalefactors_json.json  tissue_positions_list.csv
data/E13.5_rep2/spatial/: scalefactors_json.json  tissue_positions_list.csv
data/E15.5_rep1/spatial/: scalefactors_json.json  tissue_positions_list.csv
data/E15.5_rep2/spatial/: scalefactors_json.json  tissue_positions_list.csv
data/E16.5_rep1/spatial/: scalefactors_json.json  tissue_positions_list.csv
data/E16.5_rep2/spatial/: scalefactors_json.json  tissue_positions_list.csv
data/E17.5_rep1/spatial/: scalefactors_json.json  tissue_positions_list.csv
data/E17.5_rep2/spatial/: scalefactors_json.json  tissue_positions_list.csv
data/P0_rep1/spatial/: scalefactors_json.json  tissue_positions_list.csv
data/P0_rep2/spatial/: scalefactors_json.json  tissue_positions_list.csv
doc/source/: conf.py  index.rst  requirements.txt
doc/source/quick_start/: index.rst
slides/: V10M17-085.gpr  V10M17-100.gpr  V10M17-101.gpr
svgbit/: __init__.py  __main__.py  api.py  filters.py  io.py  normalizers.py  plot.py  run.py
svgbit/core/: STDataset.py  cluster.py  combinations.py  density.py  filter.py  filters.py  io.py  moran.py  normalizers.py  plot.py  utils.py
svgene/: __init__.py  __main__.py  api.py
svgene/core/: STDataset.py  cluster.py  density.py  moran.py  plot.py
(+2 files in other folders)
